tests/ui/associated-type-bounds/overlaping-bound-suggestion.stderr
error[E0191]: the value of the associated types `Item` and `IntoIter` in `IntoIterator` must be specified
  --> $DIR/overlaping-bound-suggestion.rs:6:13
   |
LL |     inner: <IntoIterator<Item: IntoIterator<Item: >>::IntoIterator as Item>::Core,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: specify the associated types: `IntoIterator<Item: IntoIterator<Item: >, Item = Type, IntoIter = Type>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0191`.
